Download: Jquery,Vite(to keep update the view),bootstrap(using it whit a little help of my friend :)

--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -1,4 +1,17 @@
+/* estilos míos aprendidos */
+nav{
+    width: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+}
+
+
+
+
 /* Estilos para tablas elegantes */
+
 .table-elegant {
     width: 100%;
     border-collapse: collapse;
